fix tabRightAlign css

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -573,3 +573,31 @@
 .navbar-dark .navbar-text a:focus {
   color: #fff;
 }
+
+.ms-auto {
+  margin-left: auto !important
+}
+
+.p-0 {
+  padding: 0 !important
+}
+
+.p-1 {
+  padding: .25rem !important
+}
+
+.p-2 {
+  padding: .5rem !important
+}
+
+.p-3 {
+  padding: 1rem !important
+}
+
+.p-4 {
+  padding: 1.5rem !important
+}
+
+.p-5 {
+  padding: 3rem !important
+}
